--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Consulting Company
 
 # User settings
 username: RLIS SOLUTIONS LTD.
-user_description: RLIS SOLUTIONS LTD. offers a range of services to its clients, including Cloud Architecture, Security, DevOps, DataOps, and MLOps. Our skilled and certified consultants work closely with our clients to understand their specific needs and challenges. We develop solutions to empower businesses.
+user_description: We believe that every business has the potential to reach new heights – our job is to help you get there. Our areas of expertise are Cloud Architecture, Security, DevOps, DataOps, and MLOps. We work closely with our clients to understand their specific needs and challenges. Together, we are building a brighter future for your business.
 #user_title: IT Consulting Company
 email: info@rlis.ca
 #twitter_username: 
